# server-bot-rust

./: .gitignore  Cargo.toml  Dockerfile  Readme.md  start.bat  start.sh
.github/workflows/: main-multiarch.yml  main.yml  rust-clippy.yml  rust.yml
src/: main.rs  message.rs  server_info.rs
