[package]
name = "discord_bot"
version = "0.1.0"
authors = ["Zefanja Jobse <zefanjaj@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.6.1", features = ["rt", "rt-multi-thread"] }
anyhow = "1.0.41"
serde_json = { version = "1.0.64" }
serde = { version = "1.0.126", features = ["derive"] }
rusttype = "0.9.2"
imageproc = "0.23.0"
chrono = "0.4.19"
warp = "0.3.1"
flexi_logger = "0.24.0"
log = "0.4.13"

[dependencies.image]
version = "0.24.4"
default-features = false
features = ["jpeg", "png"]

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "cache"]

[dependencies.reqwest]
version = "0.11.3"
default-features = false
features = ["rustls-tls", "json"]