[package]
name = "discord_bot"
version = "0.1.0"
authors = ["Zefanja Jobse <zefanjaj@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.23.0", features = ["rt", "rt-multi-thread"] }
anyhow = "1.0.68"
serde_json = { version = "1.0.91" }
serde = { version = "1.0.152", features = ["derive"] }
rusttype = "0.9.3"
imageproc = "0.23.0"
chrono = "0.4.23"
warp = "0.3.3"
flexi_logger = "0.24.2"
log = "0.4.17"

[dependencies.image]
version = "0.24.5"
default-features = false
features = ["jpeg", "png"]

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "cache"]

[dependencies.reqwest]
version = "0.11.13"
default-features = false
features = ["rustls-tls", "json"]